<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LgPg_Container_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/LgPg_AppName_label"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/lato_regular"
            android:lines="2"
            android:maxLines="2"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPepsi_ButtonBackground"
            android:textSize="45sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--error message -->
        <TextView
            android:id="@+id/LgPg_Error_label"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/lato_regular"
            android:lines="2"
            android:maxLines="2"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/Lg_errorInfo_Label_strRc"
            android:textAlignment="center"
            android:textColor="@color/colorPepsi_TxtError"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_AppName_label"
            tools:visibility="visible" />

        <!--UserName -->
        <EditText
            android:id="@+id/LgPg_Username_EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="100dp"
            android:maxLength="12"
            android:background="@drawable/grey_border"
            android:fontFamily="@font/lato_semibold"
            android:hint="@string/Lg_UserName_Textbox_strRc"
            android:padding="20dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_Error_label" />

        <!--Password -->
        <EditText
            android:id="@+id/LgPg_Password_EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:maxLength="12"
            android:background="@drawable/grey_border"
            android:fontFamily="@font/lato_semibold"
            android:hint="@string/Lg_Password_Textbox_strRc"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_Username_EditText" />


        <CheckBox
            android:id="@+id/LgPg_remember_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_semibold"
            android:gravity="start"
            android:lines="2"
            android:maxLines="2"
            android:shadowColor="@color/colorAccent"
            android:text="@string/Lg_remember_Checkbox_strRc"
            android:textColor="@color/colorPepsi_ash"
            android:textSize="24sp"
            android:theme="@style/chkboxTheme"
            app:layout_constraintStart_toStartOf="@+id/LgPg_Password_EditText"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_Password_EditText"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/LgPg_ForgetPassword_Label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato_semibold"
            android:gravity="center"
            android:lines="2"
            android:text="@string/Lg_forgotPassword_Label_strRc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPepsi"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/LgPg_Password_EditText"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_Password_EditText" />

        <Button
            android:id="@+id/LgPg_Signin_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_background"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Lg_Login_Button_strRc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPepsi_Heading_ButtonTxt"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/LgPg_ForgetPassword_Label"
            app:layout_constraintStart_toEndOf="@+id/LgPg_remember_CheckBox"
            app:layout_constraintTop_toBottomOf="@+id/LgPg_ForgetPassword_Label" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>