<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent"
    android:fillViewport="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center">

        <LinearLayout
            android:background="@drawable/dialog_bg"
            android:id="@+id/forgotpassword_Main_LayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_semibold"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingTop="0dp"
                    android:text="@string/signoutTitle"

                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTG_ash"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/SignCancel_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/SignCancel_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/closeicon"
                    android:fontFamily="@font/lato_semibold"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/lato_semibold"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/signoutInfo"
                android:textColor="@color/colorTG_TxtinfoColor"
                android:textSize="14sp" />

            <!--Username or Email Address -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/Cancel_button"
                        android:layout_width="65dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"

                        android:background="@drawable/roundedcorner_small"
                        android:fontFamily="@font/lato_semibold"

                        android:text="@string/No"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />


                    <Button
                        android:id="@+id/Ok_button"
                        android:layout_width="65dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/roundedcorner_small"
                        android:fontFamily="@font/lato_semibold"
                        android:text="@string/Yes"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
